--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 ul {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 li {
@@ -15,7 +16,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
-
+p {
+  margin: 0;
+}
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
@@ -28,6 +31,8 @@ body {
   padding: 0 10px;
   margin: 0 auto;
 }
+
+/* header */
 .header__inner {
   display: flex;
   justify-content: space-between;
@@ -53,6 +58,7 @@ body {
   color:#fff;
 }
 
+/* bike */
 .bike {
   padding: 100px 0 150px;
 }
@@ -142,4 +148,121 @@ body {
   font-size: 12px;
   line-height: 15px;
   margin: auto 0;
+}
+
+/* info */
+.info {
+  margin-bottom: 150px;
+}
+.info__inner {
+  display: flex;
+}
+.info__img {
+  margin-right: 60px; 
+  flex-basis: 570px;
+  object-fit: cover;
+}
+.info__list {
+  flex-basis: 490px;
+}
+.info__item + .info__item {
+ padding-top: 50px;
+}
+.info__item-title{
+  font-size: 16px;
+  line-height: 19px;
+  margin: 0 0 10px;
+  text-transform: uppercase;
+}
+.info__item-text {
+  max-width: 450px;
+}
+.characteristics {
+  margin-bottom: 150px;
+}
+.characteristics__head {
+  margin: 0 0 40px;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+.characteristics__inner {
+  display: flex;
+}
+.characteristics__img {
+  align-self: center;
+}
+
+.characteristics__items {
+  flex-basis: 570px;
+  margin-right: 60px;
+}
+.characteristics__list + .characteristics__list {
+  padding-top: 30px;
+}
+.characteristics__title {
+  padding: 2px 0 3px;
+  text-transform: uppercase;
+  background-color: #131313;
+  color: #fff;
+  font-weight: 700;
+}
+.characteristics__line {
+  display: flex;
+  padding-top: 5px;
+}
+.characteristics__name {
+  flex-basis: 285px;
+  padding-right: 25px; 
+}
+.characteristics__descr {
+  flex-basis: 285px;
+}
+
+/* slider */
+.slider {
+  margin-bottom: 50px;
+}
+.slider__items .slick-dots{
+  top: 0;
+  left: 0;
+}
+.slider__item {
+  padding-left: 50px;
+} 
+
+/* price */
+.price {
+  margin-bottom: 100px;
+}
+.form {
+  max-width: 420px;
+}
+.form__title {
+  margin-bottom: 40px;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+.form__text {
+  max-width: 300px;
+  margin-bottom: 30px;
+}
+.form__input-name,
+.form__input-phone {
+  width: 100%;
+  border: none;
+  border-radius: 1px solid #131313;
+  padding-bottom: 10px;
+  margin-bottom: 20px; 
+  outline: none;
+}
+.form__input-name::placeholder,
+.form__input-phone::placeholder,
+.form__input-text {
+  color: #6F6F6F;
+  opacity: 0.5; 
+}
+.form__input-text {
+  margin-bottom: 10px;
 }
