--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
   display: inline-block;
   background-color: #131313;
   color: #fff;
-  padding: 28px 81px;
+  padding: 28px 71px 28px 81px; 
   text-transform: uppercase;
   font-size: 20px;
   line-height: 24px;
@@ -235,6 +235,9 @@ body {
 .price {
   margin-bottom: 100px;
 }
+.price__inner {
+  position: relative;
+}
 .form {
   max-width: 420px;
 }
@@ -266,3 +269,86 @@ body {
 .form__input-text {
   margin-bottom: 10px;
 }
+.form__label-box {
+  display: flex;
+  margin-bottom: 50px;
+}
+.form__label + .form__label {
+  margin-left: 23px;
+}
+.form__input-radio {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+.form__input-radio:checked + .form__bike {
+  display: block;
+}
+.form__bike-price {
+  font-size: 32px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  right: 0;
+  width: 220px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ff4040;
+  border-radius: 50%;
+  transform: translateX(-40%);
+}
+.form__bike-price:after {
+  content: "";
+  position: absolute;
+  width: 220px;
+  height: 100px;
+  border: 1px solid #ff4040;
+  border-radius: 50%;
+  top: 12px;
+  left: 0;
+}
+.form__bike {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+   
+}
+.form__radio-style {
+  border-radius: 30px;
+  width: 80px;
+  height: 12px;
+  cursor: pointer;
+}
+.form__radio-style--grey {
+  background: #6F6F6F;
+}
+.form__radio-style--white {
+  background: #FFF;
+  border: 1px solid #6F6F6F;
+}
+.form__radio-style--red {
+  background: #FF4040;
+}
+.form__btn {
+  background-color: #131313;
+  padding: 28px 71px 28px 81px;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 1.1em;
+  cursor: pointer;
+} 
+
+
+
+
+
+
+
