--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 *::before {
   box-sizing: border-box;
 }
+/* html {
+  scroll-behavior: smooth;
+} */
 
 ul {
   margin: 0;
@@ -60,7 +63,7 @@ body {
 
 /* bike */
 .bike {
-  padding: 100px 0 150px;
+  padding: 100px 0 0px;
 }
 .bike__inner {
   display: flex;
@@ -98,6 +101,10 @@ body {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 1.1em;
+  transition: all .3s;
+}
+.bike__link:hover {
+  background-color: #ff4040;
 }
 
 .bike-slider .slick-dots {
@@ -152,7 +159,8 @@ body {
 
 /* info */
 .info {
-  margin-bottom: 150px;
+  padding-top: 150px;
+  margin-bottom: 50px;
 }
 .info__inner {
   display: flex;
@@ -178,6 +186,7 @@ body {
   max-width: 450px;
 }
 .characteristics {
+  padding-top: 100px;
   margin-bottom: 150px;
 }
 .characteristics__head {
@@ -344,10 +353,44 @@ body {
   line-height: 24px;
   letter-spacing: 1.1em;
   cursor: pointer;
+  transition: all .3s;
 } 
-
-
-
+.form__btn:hover {
+  background-color: #ff4040;
+}
+.footer {
+  background-color: #131313; 
+}
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+.footer__link {
+  color: #fff;
+  text-decoration: underline;
+  font-size: 12px;
+  line-height: 15px;
+}
+.footer__social-link + .footer__social-link {
+  margin-left: 26px;
+}
+.footer__contacts {
+  color: #fff;
+  font-size: 12px;
+  line-height: 15px;
+}
+.footer__contacts-link {
+  display: flex;
+  align-items: center; 
+}
+.footer__contacts-link + .footer__contacts-link {
+  margin-top: 10px;
+}
+.footer__contacts-img {
+  margin-right: 10px;
+}
 
 
 
